--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
           
       <div style="margin-top: 40px;" class="aboutMe">
         <h2  class="heading" style="text-align: center; margin-top: 10px; margin-bottom: 10px;">About Me</h2>
-          <p style="font-size: x-large; color: rgb(85, 84, 84);">I am a second-year undergraduate, at Indian Institute of Technology&#40; IIT &#41;, Indore.   
+          <p style="font-size: x-large; color: rgb(85, 84, 84);">I am a second-year undergraduate, at Indian Institute of Technology&#40;IIT&#41;, Indore.   
           </p>
           <p style="font-size: x-large; color: rgb(85, 84, 84);">
-            I have good understanding of Data Structures and Algorithms, and have practised questions realated to it.          
-            I have a fair amount of experience with web development and have used it to create several projects.
+            I have good understanding of Data Structures and Algorithms, and have practised questions related to it.          
+            I have a fair amount of experience with web development and have used it to create several projects. I have also participated in Google Cloud Platform, and have taken part in some Hackathons.
           </p>
          
       </div>
