--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               </div>
             </div>      
           </div>
-          <div class="eachCard">
+<!--           <div class="eachCard">
             <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-4">
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </div>      
-          </div>
+          </div> -->
           <div class="eachCard">
             <div class="card mb-3">
               <div class="row g-0">
