--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               </div>
             </div>      
           </div>
-<!--           <div class="eachCard">
+         <div class="eachCard">
             <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-4">
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Tapatap &#40; Under development &#41;</h5>
+                    <h5 class="card-title">Tap-a-tap &#40; Under development &#41;</h5>
                     <p class="card-text">
                       Tapatap &#40; idea from Patatap &#41; is a portable animation and sound kit.
                       With the touch of a finger create melodies charged with moving shapes. 
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </div>      
-          </div> -->
+          </div>
           <div class="eachCard">
             <div class="card mb-3">
               <div class="row g-0">
