--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="row">        
         <a href="#projectList"><i class="fas fa-code"></i>&nbsp Projects</a>        
-        <a href="https://drive.google.com/file/d/1wiqB7H7z0-dYrEqxlMi6nQI8zhZKPUZu/view?usp=sharing" target="_blank"><i class="fas fa-file"></i>&nbsp Resume</a>
+        <a href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank"><i class="fas fa-file"></i>&nbsp Resume</a>
       </div>
 
       <div class="row">               
@@ -108,7 +108,7 @@
       <br/>
 
       <div class="resumeLink" style="display: flex; justify-content: center;" >
-        <a href="https://drive.google.com/file/d/1v_XDEvW2FZlQl4-lODgUzuv99qmkksFp/view?usp=sharing" target="_blank">
+        <a href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank">
         <Button type="button"
         class="btn btn-success"        
         style="padding: 10px; font-size:large;"        
