--- a/index.html
+++ b/index.html
@@ -107,16 +107,11 @@
       <hr/>
       <br/>
 
-      <div class="resumeLink" style="display: flex; justify-content: center;" >
-        <a href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank">
-        <Button type="button"
-        class="btn btn-success"        
-        style="padding: 10px; font-size:large;"        
-        >&nbsp View Resume</Button>
+      <div class="resumeLink" style="display: flex; justify-content: center; margin-top: 12px;" >    
+        <a  href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank">
+          <button class="name noselect">Download Resume</button>      
         </a>
       </div>
-
-      <br/>
       <hr/>
 
       <div class="skills" id="skills">
