--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
     <div class="mainContent">  
           
       <div style="margin-top: 40px;" class="aboutMe">
-        <h2  class="heading" style="text-align: center; margin-top: 10px; margin-bottom: 10px;">About Me</h2>
+
+        <div class = "myName">
+          <h1>Ashish Raj</h1>
+        </div>
+        
           <p style="font-size: x-large; color: rgb(85, 84, 84);">I am a second-year undergraduate, at Indian Institute of Technology&#40;IIT&#41;, Indore.   
           </p>
           <p style="font-size: x-large; color: rgb(85, 84, 84);">
@@ -107,12 +111,10 @@
       <hr/>
       <br/>
 
-     <div class="resumeLink" style="display: flex; justify-content: center;" >
+
+      <div class="resumeLink" style="display: flex; justify-content: center;" >
         <a href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank">
-        <Button type="button"
-        class="btn btn-success"        
-        style="padding: 10px; font-size:large;"        
-        >&nbsp View Resume</Button>
+        <button class="glow-on-hover" type="button">Download Resume</button>
         </a>
       </div>
 
@@ -169,8 +171,8 @@
                     <a href="https://github.com/AshishRajIITI/algorithm-visualiser" target="_blank">
                     <button
                       type="button"
-                      class="btn btn-warning"
-                      style="width: 90%"
+                      class="btn glow-on-hover"
+                      style="width: 90%; color: white;"
                     >
                       View The Project
                     </button>
@@ -199,8 +201,8 @@
                     <a href="https://github.com/AshishRajIITI/eDOC-IITI" target="_blank">
                     <button
                       type="button"
-                      class="btn btn-warning"
-                      style="width: 90%"
+                      class="btn glow-on-hover"
+                      style="width: 90%; color: white;"
                     >
                       View The Project
                     </button>
@@ -229,8 +231,8 @@
                     <a href="https://github.com/AshishRajIITI/madad" target="_blank">
                     <button
                       type="button"
-                      class="btn btn-warning"
-                      style="width: 90%"
+                      class="btn glow-on-hover"
+                      style="width: 90%; color: white;"
                     >
                       View The Project
                     </button>
@@ -257,8 +259,8 @@
                     <a href="https://github.com/AshishRajIITI/Patatap" target="_blank">
                     <button
                       type="button"
-                      class="btn btn-warning"
-                      style="width: 90%"
+                      class="btn glow-on-hover"
+                      style="width: 90%; color: white;"
                     >
                       View The Project
                     </button>
@@ -286,8 +288,8 @@
                     <a href="https://github.com/AshishRajIITI/Javascript-Project-3-Fruit-Slicer" target="_blank">
                     <button
                       type="button"
-                      class="btn btn-warning"
-                      style="width: 90%"
+                      class="btn glow-on-hover"
+                      style="width: 90%; color: white;"
                     >
                       View The Project
                     </button>
