--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
           <p style="font-size: x-large; color: rgb(85, 84, 84);">I am a prefinal-year undergraduate, at Indian Institute of Technology&#40;IIT&#41;, Indore.   
           </p>
           <p style="font-size: x-large; color: rgb(85, 84, 84);">
-            I have good understanding of Data Structures and Algorithms, and have practised questions related to it.          
-            I have a fair amount of experience with web development and have used it to create several projects. I have also participated in Google Cloud Platform, and have taken part in some Hackathons.
+            I have good understanding of Data Structures and Algorithms, and have practised questions related to it. I participate in coding contests on Codeforces, and Codechef. Apart from this I practise Programming problems over GeeksForGeeks, and Hackerearth.          
+          </p>
+          <p style="font-size: x-large; color: rgb(85, 84, 84);">
+            I have good experience with web development and have used it to create several projects. I have also completed Goldman Sachs Virtual Engineering Program with Forage, participated in Google Cloud Program event, and have taken part in some Hackathons.
           </p>
           <p style="font-size: x-large; color: rgb(85, 84, 84);">
             I am skilled in C++/C, Data structures and Algorithms,
