--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="row">        
         <a href="#projectList"><i class="fas fa-code"></i>&nbsp Projects</a>        
-        <a href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank"><i class="fas fa-file"></i>&nbsp Resume</a>
+        <a href="https://drive.google.com/file/d/1kM-4a2nXXOn3vgAamAFXJ1trtOzZQQ9K/view?usp=sharing" target="_blank"><i class="fas fa-file"></i>&nbsp Resume</a>
       </div>
 
       <div class="row">               
@@ -135,7 +135,7 @@
 
 
       <div class="resumeLink" style="display: flex; justify-content: center;" >
-        <a href="https://drive.google.com/file/d/1fp68RndBgfaUWMRXegRr_o5QEwHHqqti/view" target="_blank">
+        <a href="https://drive.google.com/file/d/1kM-4a2nXXOn3vgAamAFXJ1trtOzZQQ9K/view?usp=sharing" target="_blank">
         <button class="glow-on-hover" type="button">Download Resume</button>
         </a>
       </div>
